@startuml

package Master {
    object MainMaster {
        WorkerInfos workerInfos
    }

    folder "Managers" {
        class RegistrationManager {

        }

        class ShuffleManager {
            + shuffle
            + shuffleForDeadWorker
        }
    }

    folder "Services" {
        class RegistrationService {

        }

        class SamplingService {

        }

        class ShuffleWorkerService {
            - broadcastNextRound(newRound: Int)
            - broadcastNextRoundForDeadWorker(newRound: Int)

            - onWorkerRoundDone(workerId: Int)
            - onWorkerDead(workerId: Int)

            - executeRound(roundId: Int)
            - executeRoundForDeadWorker(roundId: Int)
            + start()
        }
    }
    
    folder "Repositories" {
        
        interface GrpcRepository {
            
            - openServer()
            - close()

        }

        class GrpcRegistrationRepository {
            + onRegisterHandler(handler)
            + onStreamOpenedHandler(handler)

        }

        class GrpcSamplingRepository {
            + sendSampleRequest(workerId: Int, sampleSize: Int)
            + onSampleResponseHandler(handler)
        }

        class GrpcShuffleRepository {
            Map<Int, StreamObserver> streamObservers
            override StreamObserver

            + broadcastNextRound(workerId: Int, round: Int)
            + sendNextRound(workerId: Int, round: Int)
            + onWorkerRoundDoneHandler(handler)
            + onWorkerDeadHandler(handler)

            - registerWorkerStream(workerId: Int, stream: StreamObserver)
            - findWorkerId(stream: StreamObserver): Int
        }
    }
    
    folder Model {
        object GrpcShuffleStream <<Proto>>

        class Register  <<ProtoMsg>>
    }

    ' Relationships
    MainMaster --> Managers
    Managers --> Services
    Services --> Repositories
    
}


@enduml